# Astrophysics-Research

./: .gitignore  ActionInitialization.cc  ActionInitialization.hh  CMakeLists.txt  Combined_info_summary.txt  DetectorConstruction.cc  DetectorConstruction.hh  PhysicsList.cc  PhysicsList.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  README.md  RunAction.cc  RunAction.hh  StackingAction.cc  StackingAction.hh  SteppingAction.cc  SteppingAction.hh  TrackingAction.cc  TrackingAction.hh  geometryCreation.cc  globalVars.cc  globalVars.hh  main.cc  photonTrackingInfo.hh  run_batch.sh
Electron Range/: electronRangeSpectrumGrapher.py  electronRanges.txt
Python Files/: combineFiles.py  plotForPlBpl.py  plotSpectra.py  plot_escape_flux_vs_time.py  plot_line_rates_vs_time.py  rebinAndPlotBremsCompton.py  rebinAndPlotBremsComptonDirect.py  rebinAndPlotBremsDirect.py  rebinAndPlotElectrons.py  rebinAndPlotEverything.py  temp.py  tfluxco56.W7_1Mpc_0p5894MsunNi56  tfluxni56.W7_1Mpc_0p5894MsunNi56
Radiation Yields/: brems_yield_10000keV.csv  brems_yield_1000keV.csv  brems_yield_100keV.csv  brems_yield_10keV.csv  brems_yield_2000keV.csv  brems_yield_200keV.csv  brems_yield_20keV.csv  brems_yield_2keV.csv  brems_yield_3000keV.csv  brems_yield_300keV.csv  brems_yield_30keV.csv  brems_yield_3keV.csv  brems_yield_4000keV.csv  brems_yield_400keV.csv  brems_yield_40keV.csv  brems_yield_4keV.csv  brems_yield_5000keV.csv  brems_yield_500keV.csv  brems_yield_50keV.csv  brems_yield_5keV.csv  brems_yield_6000keV.csv  brems_yield_600keV.csv  brems_yield_60keV.csv  brems_yield_6keV.csv  (+13 more)
(+66 files in other folders)
